<resources>
    <string name="app_name">Chinthaka</string>
    <string name="app_tagline">Answer, Learn &amp; Share</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook_application_id">1052509235547991</string>
    <string name="facebook_app_id">1052509235547991</string>
    <string name="fb_login_protocol_scheme">fb1052509235547991</string>
    <string name="google_client_id">394317677096-e7cagni6v3tcvp1l5ke0ec4mjptbfub9.apps.googleusercontent.com</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="create">Create</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="categories">Categories</string>
    <string name="example_post_text">Today is a good day to make a post in this social network, this is actually just an example text I write to have some lines of text</string>
    <string name="example_post_username">Pradyumna Yogan</string>
    <string name="example_category_name">Logical Reasoning</string>
    <string name="search_hint">Search...</string>
    <string name="posts">Posts</string>
    <string name="logout">Logout</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">Register a new account</string>
    <string name="login_with_existing_account">Login with an existing account</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="success_registration">Successfully registered account</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_invalid_credentials">The E-Mail or password is incorrect</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="choose_image">Choose image</string>
    <string name="choose_answer_image">Choose Answer Image (Optional)</string>
    <string name="enter_post_text">Enter post text</string>
    <string name="enter_post_answer">Enter post answer</string>
    <string name="choose_post_category">Choose post category</string>
    <string name="enter_answer_description">Enter answer description (optional)</string>
    <string name="post">Post</string>
    <string name="error_invalid_file">The chosen image is invalid</string>
    <string name="username">Username</string>
    <string name="no_description">No Description</string>
    <string name="short_bio">About You</string>
    <string name="update_profile">Update Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="view_or_edit_your_profile">View/Edit your Profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="answer_submitted">Answer Submitted</string>
    <string name="view_my_posts">View My Posts</string>
    <string name="update_interests">Update Interests</string>
    <string name="create_new_post">Create new Post</string>
    <string name="interests">Interests</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="no_changes_detected">You didn\'t change anything</string>
    <string name="delete_post_dialog_title">Do you want to delete that post?</string>
    <string name="delete_post_dialog_message">This action cannot be undone.</string>
    <string name="delete_post_dialog_positive">Yes</string>
    <string name="delete_post_dialog_negative">No</string>
    <string name="view_answer_dialog_title">View Answer</string>
    <string name="view_answer_dialog_message">Once you view the answer, you’ll no longer be able to submit your answer for this post. Would you like to proceed?</string>
    <string name="view_answer_dialog_positive">Yes</string>
    <string name="view_answer_dialog_negative">No</string>
    <string name="view_answer_from_submit_answer_dialog_message">Would you like to check out the explanation for the correct answer?</string>
    <string name="attempts_exhausted_submit_answer_dialog_message">You have exhausted the available attempts and can no longer submit the answer. Would you like to check out the correct answer?</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="liked_by_dialog_title">Liked by</string>
    <string name="answered_by_dialog_title">Answered by</string>
    <string name="error_no_image_chosen">Please choose an image for the post</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="comments">Comments</string>
    <string name="nav_header_title">Pradyumna Yogan</string>
    <string name="nav_header_desc">Chinthaka</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="explanation">Explanation</string>
    <string name="sounds_fine">Sounds Fine</string>
    <string name="sounds_incorrect">Sounds Incorrect</string>
    <string name="submit">Submit</string>
    <string name="type_your_answer_here">Type your answer here</string>
    <string name="get_hint">Get Hint</string>
    <string name="sample_answer">Lorem Ipsum can I have a candy can I have a candy</string>
    <string name="answer_explanation">android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>
    <string name="is_new_user">isNewUser</string>
    <string name="is_new_user_true">TRUE</string>
    <string name="is_new_user_false">FALSE</string>
    <string name="invite_friends_description">Dear Chinthaka,\nThank you for taking time to invite your friends to the Chinthaka community. We greatly appreciate your help in building a strong Chinthaka community.\n- Team Chinthaka </string>
    <string name="feedback_description">Dear Chinthaka,\nWe believe that you are the best person to receive feedback from! Thank you for taking time to provide us your valuable feedback.\n- Team Chinthaka </string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>