<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@id/profileFragment"
            android:icon="@drawable/ic_my_posts"
            android:title="@string/view_my_posts" />

        <item
            android:id="@id/privacyPolicyFragment"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/privacy_policy" />

        <item
            android:id="@id/inviteFriendsFragment"
            android:icon="@drawable/ic_invite_friends"
            android:title="@string/invite_friends" />

        <item
            android:id="@id/feedbackFragment"
            android:icon="@drawable/ic_feedback"
            android:title="@string/submit_feedback" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
</menu>