<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    app:cardElevation="1dp"
    app:cardCornerRadius="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAuthorProfileImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/img_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPostAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/example_post_username"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toTopOf="@id/tvPostCategory"
            app:layout_constraintStart_toEndOf="@+id/ivAuthorProfileImage"
            app:layout_constraintTop_toTopOf="@+id/ivAuthorProfileImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPostCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/example_category_name"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintBottom_toBottomOf="@+id/ivAuthorProfileImage"
            app:layout_constraintStart_toEndOf="@+id/ivAuthorProfileImage"
            app:layout_constraintTop_toBottomOf="@id/tvPostCategory"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/ibExpandPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_expand_more"
            app:layout_constraintBottom_toBottomOf="@+id/ivAuthorProfileImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivAuthorProfileImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPostText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/example_post_text"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintTop_toBottomOf="@id/ivAuthorProfileImage"
            tools:layout_editor_absoluteX="8dp" />

        <ImageView
            android:id="@+id/ivPostImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPostText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLikedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="234"
            android:textFontWeight="600"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_thumbs_up_filled"
            android:drawablePadding="5dp"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toBottomOf="@+id/ivPostImage"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAnsweredBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="10002"
            android:textFontWeight="800"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_answered_by"
            android:drawablePadding="5dp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintTop_toBottomOf="@+id/ivPostImage"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/grayBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLikedBy" />

        <RelativeLayout
            android:id="@+id/rlLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintEnd_toStartOf="@id/rlAnswer"
            app:layout_constraintHorizontal_chainStyle="spread_inside">

            <ImageButton
                android:id="@+id/ibLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_thumbs_up"
                android:layout_centerInParent="true"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ibLike"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="Like"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toEndOf="@id/rlLike"
            app:layout_constraintEnd_toStartOf="@id/rlViewAnswer"
            app:layout_constraintHorizontal_chainStyle="spread_inside">

            <ImageButton
                android:id="@+id/ibAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_answer_outline"
                android:layout_centerInParent="true"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="13sp"
                android:text="Answer"
                android:textColor="@color/black"
                android:layout_below="@id/ibAnswer"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlViewAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toEndOf="@id/rlAnswer"
            app:layout_constraintEnd_toStartOf="@id/rlShare"
            app:layout_constraintHorizontal_chainStyle="spread_inside">

            <ImageButton
                android:id="@+id/ibViewAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_view_answer_outline"
                android:layout_centerInParent="true"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvViewAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="13sp"
                android:text="View Answer"
                android:textColor="@color/black"
                android:layout_below="@id/ibViewAnswer"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toEndOf="@id/rlViewAnswer"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/ibShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_share_outline"
                android:layout_centerInParent="true"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="13sp"
                android:text="Share"
                android:textColor="@color/black"
                android:layout_below="@id/ibShare"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
